--- a/achievements.html
+++ b/achievements.html
@@ -1,47 +1,47 @@
 <html>
-	<head>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="achievements.css">
-		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="quicksand.css">
-		<script src="entries.js"></script>
-		<script src="login.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
-	</head>
-	<body onload="loadEntryPage('achievement')">
-		<div class="container-fluid">
-			<div id="achievementsList">
-				<div class="row">
-					<div class='col-md-1'></div>
-					<div class='col-md-4'>
-						<h1 class="text-white text-center"><i>Reminders</i></h1>
-					</div>
-					<div class='col-md-2'>
-						<a href="ahub.html">
-							<div class='return'>
-								<p class="text-center textReturn">Return home</p>
-							</div>
-						</a>
-					</div>
-					<div class='col-md-2'>
-						<div class="addAnAchievement" onclick="addEntry('achievement')">
-							<p class="text-center textReturn">Add a reminder</p>
-						</div>
-					</div>
-					<div class='col-md-2'>
-						<div class="deleteAnAchievement" onclick="removeEntry('achievement')">
-							<p class="text-center textReturn">Delete a reminder</p>
-						</div>
-					</div>
-					<div class='col-md-1'></div>
-				</div>
-				<hr />
-				<div id="achievementPods"></div>
-			</div>
-			<div id="selectDivToRemove">
-				<h1 class="text-center">Select achievement to remove</h1>
-			</div>
-		</div>
-	</body>
+    <head>
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="achievements.css">
+        <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="quicksand.css">
+        <script src="entries.js"></script>
+        <script src="login.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
+    </head>
+    <body onload="loadEntryPage('achievement')">
+        <div class="container-fluid">
+            <div id="achievementsList">
+                <div class="row">
+                    <div class='col-md-1'></div>
+                    <div class='col-md-4'>
+                        <h1 class="text-white text-center"><i>Achievements</i></h1>
+                    </div>
+                    <div class='col-md-2'>
+                        <a href="ahub.html">
+                            <div class='return'>
+                                <p class="text-center textReturn">Return home</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class='col-md-2'>
+                        <div class="addAnAchievement" onclick="addEntry('achievement')">
+                            <p class="text-center textReturn">Add an achievement</p>
+                        </div>
+                    </div>
+                    <div class='col-md-2'>
+                        <div class="deleteAnAchievement" onclick="removeEntry('achievement')">
+                            <p class="text-center textReturn">Delete an achievement</p>
+                        </div>
+                    </div>
+                    <div class='col-md-1'></div>
+                </div>
+                <hr />
+                <div id="achievementPods"></div>
+            </div>
+            <div id="selectDivToRemove">
+                <h1 class="text-center">Select achievement to remove</h1>
+            </div>
+        </div>
+    </body>
 </html>
