--- a/achievements.html
+++ b/achievements.html
@@ -2,11 +2,11 @@
     <head>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="achievements.css">
+        <link rel="stylesheet" type="text/css" href="css/achievements.css">
         <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="quicksand.css">
-        <script src="entries.js"></script>
-        <script src="login.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/quicksand.css">
+        <script src="js/entries.js"></script>
+        <script src="js/login.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
     </head>
     <body onload="loadEntryPage('achievement')">
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class='col-md-1'></div>
                     <div class='col-md-4'>
-                        <h1 class="text-white text-center"><i>Achievements</i></h1>
+                        <h1 class="text-white text-center" style="margin-top:7%;"><i>Achievements</i></h1>
                     </div>
                     <div class='col-md-2'>
                         <a href="ahub.html">
