--- a/ahub.html
+++ b/ahub.html
@@ -3,11 +3,11 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="quicksand.css">
-        <link rel="stylesheet" type="text/css" href="ahub.css">
-        <script src="ahub.js" type="text/javascript"></script>
-        <script src="login.js"></script>
-        <script src="filter.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/quicksand.css">
+        <link rel="stylesheet" type="text/css" href="css/ahub.css">
+        <script src="js/ahub.js" type="text/javascript"></script>
+        <script src="js/login.js"></script>
+        <script src="js/filter.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
         <script>
             window.onload = function() {
