--- a/calendar.html
+++ b/calendar.html
@@ -5,8 +5,8 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-        <link href='calendar.css' rel='stylesheet' type='text/css'>
-        <link href='quicksand.css' rel='stylesheet' type='text/css'>
+        <link href='css/calendar.css' rel='stylesheet' type='text/css'>
+        <link href='css/quicksand.css' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
     </head>
     <body>
