--- a/reminders.html
+++ b/reminders.html
@@ -2,10 +2,10 @@
     <head>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="reminders.css">
+        <link rel="stylesheet" type="text/css" href="css/reminders.css">
         <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="quicksand.css">
-        <script src="entries.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/quicksand.css">
+        <script src="js/entries.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script> <!-- JQUERY -->
     </head>
     <body onload="loadEntryPage('reminder')">
